fixed layout shift

--- a/styles.css
+++ b/styles.css
@@ -53,6 +53,14 @@ h1 {
   }
 }
 
+img {
+  opacity: 0;
+  transition: opacity 0.5s ease-out;
+}
+img[data-loaded="true"] {
+  opacity: 1;
+}
+
 a {
   text-decoration: none;
   color: inherit;
